# kinect2PCL

./: CMakeLists.txt  Makefile  README.md  view3d.cpp  view3d.h
include/: view3d.h
src/: view3d.cpp
